k8s/apps/network/vpn-egress/cilium-network-policy.k8s.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: pod-gateway
  namespace: vpn-egress
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: vpn-egress
      app.kubernetes.io/name: pod-gateway 
  egress:
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "51820"
    - toEntities:
        - world
      icmps:
        - fields:
          - type: 8
            family: IPv4
          - type: 128
            family: IPv6
          protocol: UDP
    - toEntities:
        - cluster
